--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <span class="icon-bar"></span>
     </button>
     
-	    <label class="navbar-brand">Nivel</label>
+	    <label class="navbar-brand">Nivel Juego</label>
 	    <select name="Nivel">
 		    <option></option selected>
 		    <option>Facil</option>
